<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        style="@style/GameTitleStyle"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/turn_layout"
        />

    <LinearLayout
        android:id="@+id/turn_layout"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/id"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/is_now_playing">

        <TextView
            android:id="@+id/turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn"
            android:layout_marginEnd="16dp"
            style="@style/turn"
            />

        <TextView
            android:id="@+id/turn_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_count"
            style="@style/turn"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/is_now_playing"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        style="@style/nowPlaying"
        app:layout_constraintTop_toBottomOf="@id/turn_layout"
        app:layout_constraintBottom_toTopOf="@id/role_name"

        />

    <TextView
        android:id="@+id/role_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/role_placeholder"
        style="@style/RoleNameStyleBig"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/is_now_playing"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/role_owner"
        />

    <TextView
        android:id="@+id/role_owner"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/owner_placeholder"
        android:layout_marginHorizontal="8dp"
        style="@style/nowOwner"
        app:layout_constraintTop_toBottomOf="@id/role_name"
        app:layout_constraintBottom_toTopOf="@id/role_info"
        />

    <TextView
        android:id="@+id/role_info"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:maxLines="3"
        android:text="@string/info_placeholder"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        style="@style/nowInfo"
        app:layout_constraintTop_toBottomOf="@id/role_owner"
        app:layout_constraintBottom_toTopOf="@id/action_buttons"
        />


    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/role_info"
        app:layout_constraintBottom_toTopOf="@id/next_button">

        <Button
            android:id="@+id/use_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/action1_button"
            style="@style/ActionButtonStyle"
            android:layout_marginHorizontal="16dp"
            />

    </LinearLayout>


    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        style="@style/BigButtonStyle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--
    <TextView
        android:id="@+id/test_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLines="19"
        android:minLines="8"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/RoleDescriptionStyle"
        android:textAlignment="center"
        android:text="@string/description_placeholder"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>