<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/RoleText"
        android:text="@string/role_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        style="@style/RoleNameStyle"
        android:layout_weight="0.5"
        />

    <TextView
    android:id="@+id/powerText"
    android:text="@string/power_text_placeholder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    style="@style/RoleCardOwnerTextStyle"
    android:layout_weight="1"
    />

    <TextView
        android:id="@+id/targetsText"
        android:text="@string/role_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        style="@style/RoleCardOwnerTextStyle"
        android:layout_weight="1"
        />


    <LinearLayout
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/blackWCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/blackWOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/blackWAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/blueWCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/blueWOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/blueWAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/redWCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/redWOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/redWAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wWCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/wWOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/wWAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fWCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/fWOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/fWAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/servantCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/servantOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/servantAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wildCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/wildOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/wildAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cupidCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/cupidOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/cupidAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/guardCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/guardOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/guardAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sorcererCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/sorcererOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/sorcererAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sheepCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/sheepOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/sheepAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/seerCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/seerOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/seerAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/knightCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/knightOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/knightAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/barberCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/barberOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/barberAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cptCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/cptOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/cptAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/vOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/vAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/pOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/pAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/aCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/aOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/aAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bearCard"
                    style="@style/RoleCardStyle">
                    <TextView
                        android:id="@+id/bearOwner"
                        style="@style/RoleCardOwnerTextStyle"/>
                    <Button
                        android:id="@+id/bearAction"
                        style="@style/RoleCardButtonStyle"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_weight="1"
        android:text="@string/action2_button"
        style="@style/BigButtonStyle"
        android:layout_margin="8dp"/>
    
</LinearLayout>